@@ -27,8 +27,7 @@ IM_Entry(
     null,
     array(
         'db-class' => 'FileMaker_DataAPI',
-//        'server' => 'localserver',
-        'server' => '192.168.17.109',
+        'server' => 'localserver',
         'port' => '443',
         'protocol' => 'https',
         'cert-verifying' => false,
