@@ -72,6 +72,9 @@ IM_Entry(
     array(
         'db-class' => 'FileMaker_DataAPI',
         'server' => 'localserver',
+        'port' => '443',
+        'protocol' => 'https',
+        'cert-verifying' => false,
     ),
-    false
+    2
 );
