@@ -549,45 +549,32 @@ class FileMaker_DataAPI extends UseSharedObjects implements DBClass_Interface
             }
         }
 
-        $portal = array();
-        $portalNames = array();
+        $portal = [];
+        $portalNames = [];
         $recordId = NULL;
         $result = NULL;
-        $scriptResultPrerequest = NULL;
-        $scriptResultPresort = NULL;
-        $scriptResult = NULL;
         try {
-            if ($conditions && count($conditions) === 1 && isset($conditions[0]['recordId'])) {
-                $recordId = str_replace('=', '', $conditions[0]['recordId']);
-                if (is_numeric($recordId)) {
-                    $conditions[0]['recordId'] = $recordId;
-                    $result = $this->fmData->{$layout}->getRecord($recordId);
-                }
-            } else {
-                $result = $this->fmData->{$layout}->query($conditions, $sort, $skip + 1, 1);
-            }
-
-            $this->notifyHandler->setQueriedEntity($layout);
-            $this->notifyHandler->setQueriedCondition("/fmi/rest/api/find/{$this->dbSettings->getDbSpecDatabase()}/{$layout}" . ($recordId ? "/{$recordId}" : ""));
-
+            $result = $this->fmData->{$layout}->getMetadata();
             if (!is_null($result)) {
-                $portalNames = $result->getPortalNames();
-                if (count($portalNames) >= 1) {
-                    foreach ($portalNames as $key => $portalName) {
-                        $portal = array_merge($portal, array($key => $portalName));
+                // Get the portal array from the metadata of the layout.
+                if ($result->portalMetaData) {
+                    foreach ($result->portalMetaData as $key => $portalName) {
+                        $portal[] = $key;
                     }
-                    if (!is_numeric($recordId)) {
-                        $result = $this->fmData->{$layout}->query(
-                            $conditions,
-                            $sort,
-                            $skip + 1,
-                            $limitParam,
-                            $portal,
-                            $script
-                        );
-                        $scriptResultPrerequest = $this->fmData->{$layout}->getScriptResultPrerequest();
-                        $scriptResultPresort = $this->fmData->{$layout}->getScriptResultPresort();
-                        $scriptResult = $this->fmData->{$layout}->getScriptResult();
+                }
+                $result = null;
+                if ($conditions && count($conditions) === 1 && isset($conditions[0]['recordId'])) {
+                    $recordId = str_replace('=', '', $conditions[0]['recordId']);
+                    if (is_numeric($recordId)) {
+                        $conditions[0]['recordId'] = $recordId;
+                        $result = $this->fmData->{$layout}->getRecord($recordId);
+                    }
+                    if (is_null($result)) {
+                        $this->mainTableCount = 0;
+                        $this->mainTableTotalCount = 0;
+                    } else {
+                        $this->mainTableCount = 1;
+                        $this->mainTableTotalCount = 1;
                     }
                 } else {
                     $result = $this->fmData->{$layout}->query(
@@ -595,20 +582,21 @@ class FileMaker_DataAPI extends UseSharedObjects implements DBClass_Interface
                         $sort,
                         $skip + 1,
                         $limitParam,
-                        $portal,
+                        array_unique($portal),
                         $script
                     );
-                    $scriptResultPrerequest = $this->fmData->{$layout}->getScriptResultPrerequest();
-                    $scriptResultPresort = $this->fmData->{$layout}->getScriptResultPresort();
-                    $scriptResult = $this->fmData->{$layout}->getScriptResult();
+                    $this->mainTableCount = intval($this->fmData->getFoundCount());
+                    $this->mainTableTotalCount = intval($this->fmData->getTotalCount());
                 }
+                $this->notifyHandler->setQueriedEntity($layout);
+                $this->notifyHandler->setQueriedCondition("/fmi/rest/api/find/{$this->dbSettings->getDbSpecDatabase()}/{$layout}" . ($recordId ? "/{$recordId}" : ""));
+                $this->logger->setDebugMessage($this->stringWithoutCredential($this->fmData->{$layout}->getDebugInfo()));
             }
-            $this->logger->setDebugMessage($this->stringWithoutCredential($this->fmData->{$layout}->getDebugInfo()));
         } catch (Exception $e) {
             // Don't output error messages if no (related) records
             if (strpos($e->getMessage(), 'Error Code: 101, Error Message: Record is missing') === false &&
                 strpos($e->getMessage(), 'Error Code: 401, Error Message: No records match the request') === false) {
-                $this->logger->setErrorMessage("Exception:[6] {$e->getMessage()}");
+                $this->logger->setErrorMessage("Exception:[6]{$e->getMessage()}");
             }
         }
 
@@ -671,34 +659,6 @@ class FileMaker_DataAPI extends UseSharedObjects implements DBClass_Interface
                 if (intval($result->count()) == 1) {
                     break;
                 }
-            }
-
-
-            if ($scriptResultPrerequest !== NULL || $scriptResultPresort !== NULL || $scriptResult !== NULL) {
-                // Avoid multiple executing FileMaker script
-                if ($scriptResultPresort === NULL && $scriptResult === NULL) {
-                    $scriptResult = $scriptResultPrerequest;
-                } else if ($scriptResult === NULL) {
-                    $scriptResult = $scriptResultPresort;
-                }
-                if (strpos($scriptResult, '/') !== false) {
-                    $mainTableCount = substr($scriptResult, 0, strpos($scriptResult, '/'));
-                    $mainTableTotalCount = substr($scriptResult, strpos($scriptResult, '/') + 1, strlen($scriptResult));
-                    $this->mainTableCount = intval($mainTableCount);
-                    $this->mainTableTotalCount = intval($mainTableTotalCount);
-                } else {
-                    $this->mainTableCount = intval($scriptResult);
-                    $this->mainTableTotalCount = intval($scriptResult);
-                }
-            } else {
-                if ($conditions && count($conditions) === 1 && isset($conditions[0]['recordId']) && is_numeric($recordId)) {
-                    $this->mainTableCount = 1;
-                } else {
-                    $result = $this->fmData->{$layout}->query($conditions, NULL, 1, 100000000, NULL, $script);
-                    $this->mainTableCount = $result->count();
-                }
-                $result = $this->fmData->{$layout}->query(NULL, NULL, 1, 100000000, NULL, $script);
-                $this->mainTableTotalCount = $result->count();
             }
         }
 
